update latest code for alertmend.io

--- a/css/styles.css
+++ b/css/styles.css
@@ -1264,7 +1264,7 @@ main {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: top;
   justify-content: flex-start;
   gap: 3rem 5rem;
 }
@@ -1354,14 +1354,11 @@ main {
 
 .tech-logo .img-fix {
   background: #fff;
-  border: 4px solid #00446d;
-  border-radius: 50%;
+  border: 4px solid rgba(0, 68, 109, 0.7);
+  border-radius: 10px;
   width: 95px;
   height: 95px;
-  padding: 10px;
-}
-.tech-logo .img-fix img {
-  border-radius: 50%;
+  padding: 17px;
 }
 
 .contform .wpcf7-form-control {
@@ -1377,4 +1374,12 @@ main {
 .contform textarea {
   height: 10rem;
   resize: none;
+}
+
+.video-section {
+  background: linear-gradient(93.26deg, #0074BA 2.69%, #003454 225.23%);
+  border-radius: 2.7rem;
+  text-align: center;
+  padding: 30px;
+  border: 1rem solid #E6F2F9;
 }/*# sourceMappingURL=styles.css.map */
