--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1222,7 +1222,7 @@
                 .contactus {
                     &_inner {
                         .contactus_block {
-                            @include flexprob(center);
+                            @include flexprob(top);
                                 justify-content: flex-start;
                                 gap: 3rem 5rem;
                             .contactus_box {      
@@ -1326,14 +1326,14 @@
     .img-fix{
         // background: #00446d;
         background: #fff;
-        border: 4px solid #00446d;
-        border-radius: 50%;
+        border: 4px solid rgba(0, 68, 109,0.7);
+        border-radius: 10px;
         width: 95px;
         height: 95px;
-        padding: 10px;
-        img{
-            border-radius: 50%;
-        }
+        padding: 17px;
+        // img{
+        //     border-radius: 50%;
+        // }
     }
 }
 .contform{
@@ -1352,5 +1352,13 @@
         resize: none;
     }
     
+
+}
+.video-section{
+    background: linear-gradient(93.26deg, #0074BA 2.69%, #003454 225.23%);
+    border-radius: 2.7rem; 
+    text-align: center;
+    padding: 30px;
+    border: 1rem solid #E6F2F9;
 
 }
